{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Snake",
            "id": "9aa38211-c2ad-4719-8e8b-280a2e3f74d6",
            "actions": [
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "5586d8c6-e3b9-4a53-870b-853659d06b62",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "2efe919c-f9e4-4b46-9401-3ec6f36410fd",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "c0c6fe4a-e196-49e3-afc6-adf9195be871",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "b6102970-eb87-4cd2-9997-667ee475c891",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Player",
            "id": "7bd0b623-8d49-49ce-b19d-7966a3dbd178",
            "actions": [
                {
                    "name": "MouseX",
                    "type": "PassThrough",
                    "id": "69ee04c9-45bb-410e-b3af-b8fc22bfca77",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseY",
                    "type": "PassThrough",
                    "id": "2c69d32a-b44d-44b9-85c5-a0de90de754e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "ba924dae-21dc-4a17-8911-cf1c23919f66",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Catch",
                    "type": "Button",
                    "id": "28d9374d-fb42-435c-9f99-50c162c25dd7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2a708631-3c9f-4a54-88ba-1736d6fd0d42",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6fb1f2f2-f3d8-41de-9c66-2f89a35d6e9d",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e37cc23-1776-4464-a95a-6dff8c3f6d3a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d9b2ac75-3ffa-433f-91d1-98226e27f763",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Catch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}